exports[`ListArticles correctly handles empty lists without errors 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [],
      "pageInfo": Object {
        "firstCursor": null,
        "lastCursor": null,
      },
      "totalCount": 0,
    },
  },
}
`;

exports[`ListArticles filters 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJiYXNpYyNsaXN0QXJ0aWNsZVRlc3QxIl0=",
        "lastCursor": "WyJiYXNpYyNsaXN0QXJ0aWNsZVRlc3QxIl0=",
      },
      "totalCount": 1,
    },
  },
}
`;

exports[`ListArticles filters 2`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest3",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJiYXNpYyNsaXN0QXJ0aWNsZVRlc3QzIl0=",
        "lastCursor": "WyJiYXNpYyNsaXN0QXJ0aWNsZVRlc3QxIl0=",
      },
      "totalCount": 2,
    },
  },
}
`;

exports[`ListArticles lists all articles 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "cursor": "WyJiYXNpYyNsaXN0QXJ0aWNsZVRlc3QzIl0=",
          "node": Object {
            "id": "listArticleTest3",
          },
        },
        Object {
          "cursor": "WyJiYXNpYyNsaXN0QXJ0aWNsZVRlc3QyIl0=",
          "node": Object {
            "id": "listArticleTest2",
          },
        },
        Object {
          "cursor": "WyJiYXNpYyNsaXN0QXJ0aWNsZVRlc3QxIl0=",
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJiYXNpYyNsaXN0QXJ0aWNsZVRlc3QzIl0=",
        "lastCursor": "WyJiYXNpYyNsaXN0QXJ0aWNsZVRlc3QxIl0=",
      },
      "totalCount": 3,
    },
  },
}
`;

exports[`ListArticles sorts 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest3",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest2",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WzMsImJhc2ljI2xpc3RBcnRpY2xlVGVzdDMiXQ==",
        "lastCursor": "WzEsImJhc2ljI2xpc3RBcnRpY2xlVGVzdDEiXQ==",
      },
      "totalCount": 3,
    },
  },
}
`;

exports[`ListArticles sorts 2`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest2",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest3",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WzIsImJhc2ljI2xpc3RBcnRpY2xlVGVzdDEiXQ==",
        "lastCursor": "WzAsImJhc2ljI2xpc3RBcnRpY2xlVGVzdDMiXQ==",
      },
      "totalCount": 3,
    },
  },
}
`;

exports[`ListArticles supports after 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJiYXNpYyNsaXN0QXJ0aWNsZVRlc3QzIl0=",
        "lastCursor": "WyJiYXNpYyNsaXN0QXJ0aWNsZVRlc3QxIl0=",
      },
      "totalCount": 3,
    },
  },
}
`;

exports[`ListArticles supports before 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest3",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJiYXNpYyNsaXN0QXJ0aWNsZVRlc3QzIl0=",
        "lastCursor": "WyJiYXNpYyNsaXN0QXJ0aWNsZVRlc3QxIl0=",
      },
      "totalCount": 3,
    },
  },
}
`;
